...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NextActivity">

    <ListView
        android:id="@+id/next_directions_view"
        android:layout_width="322dp"
        android:layout_height="437dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="128dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></ListView>

    <Button
        android:id="@+id/next_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="24dp"
        android:onClick="NextBackButton"
        android:text="Previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_directions_view" />

    <Button
        android:id="@+id/next_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="30dp"
        android:onClick="NextNextButton"
        android:text="Next"
        app:layout_constraintEnd_toStartOf="@+id/next_back_button"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/next_directions_view" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="11dp"
        android:onClick="NextSkipButton"
        android:text="Skip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_directions_view" />

    <TextView
        android:id="@+id/TotalDistance"
        android:layout_width="335dp"
...
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_back_button" />

    <Button
        android:id="@+id/NextDescriptionToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="262dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="10dp"
        android:text="Description Toggle"
        android:onClick="NextDescriptionToggle"
        app:layout_constraintBottom_toTopOf="@+id/next_directions_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
